@@ -30,6 +30,9 @@ my $Remote_port = get_conf("SERVER_PORT");
 my $Node_file_db_field = get_conf("NODE_FILE_DB_FIELD");
 $Node_file_db_field = oar_Tools::get_default_node_file_db_field() if (!defined($Node_file_db_field));
 
+my $Node_file_db_field_distinct_values = get_conf("NODE_FILE_DB_FIELD_DISTINCT_VALUES");
+$Node_file_db_field_distinct_values = oar_Tools::get_default_node_file_db_field_distinct_values() if (!defined($Node_file_db_field_distinct_values));
+
 my $Openssh_cmd = get_conf("OPENSSH_CMD");
 $Openssh_cmd = oar_Tools::get_default_openssh_cmd() if (!defined($Openssh_cmd));
 
@@ -319,6 +322,7 @@ my %data_to_transfer = (
         job_env             => $job->{job_env},
         resources           => \@resources,
         node_file_db_fields => $Node_file_db_field,
+        node_file_db_fields_distinct_values => $Node_file_db_field_distinct_values,
         user                => $job->{job_user},
         types               => $types,
         name                => $job->{job_name},
