@@ -211,8 +211,14 @@ if (! open(FILE,">$Node_file")){
 }
 #Feed the node file
 my @tmp_res;
+my %tmp_already_there;
 foreach my $r (@{$Job->{resources}}){
-    push(@tmp_res, $r->{$Job->{node_file_db_fields}}) if (($r->{$Job->{node_file_db_fields}} ne "") and ($r->{type} eq "default")); 
+    if (($r->{$Job->{node_file_db_fields}} ne "") and ($r->{type} eq "default")){
+        if (($r->{$Job->{node_file_db_fields_distinct_values}} ne "") and (!defined($tmp_already_there{$r->{$Job->{node_file_db_fields_distinct_values}}}))){
+            push(@tmp_res, $r->{$Job->{node_file_db_fields}});
+            $tmp_already_there{$r->{$Job->{node_file_db_fields_distinct_values}}} = 1;
+        }
+    }
 }
 foreach my $f (sort(@tmp_res)){
     print(FILE "$f\n") or exit(5);
