@@ -67,6 +67,11 @@ COSYSTEM_HOSTNAME="127.0.0.1"
 # type=default are displayed in this file.
 #NODE_FILE_DB_FIELD="network_address"
 
+# Specify the database field that will be considered to fill the node file used
+# by the user on the first node of the job. for each different value of this field
+# then OAR will put 1 line in the node file(by default "cpu"). 
+#NODE_FILE_DB_FIELD_DISTINCT_VALUES="cpu"
+
 # If you want to free a process per job on the server you can change this tag
 #into 1 (you must enable all nodes to connect to SERVER_PORT on the SERVER_HOSTNAME)
 DETACH_JOB_FROM_SERVER="0"
